// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AvatarComponent should render the template correctly with image 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
  <div
    class="avatar"
  >
    <img
      alt="imageAltText"
      src="image.jpg"
    />
  </div>
  <!--container-->
</div>
`;

exports[`AvatarComponent should render the template correctly with initials 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <div
    class="avatar bg-purple-200"
  >
    <span>
      JB
    </span>
  </div>
  <!--container-->
  <!--container-->
</div>
`;
